--- a/Examples_2/CV19SIM.ipynb
+++ b/Examples_2/CV19SIM.ipynb
@@ -19,7 +19,13 @@
     "import pandas as pd\n",
     "import toml\n",
     "import time\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import sys\n",
+    "from pathlib import Path\n",
+    "sys.path.insert(1, '../src2/models/')\n",
+    "sys.path.insert(1, '../src2/utils/')\n",
+    "sys.path.insert(1, '../src2/data/')"
    ]
   },
   {
@@ -28,16 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cd .."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from src2.models.cv19sim import cv19sim"
+    "from cv19sim import cv19sim"
    ]
   },
   {
@@ -53,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cfgfile = 'config_files/SEIR_metasim.toml'\n",
+    "cfgfile = '../config_files/SEIR_metasim.toml'\n",
     "cfg = toml.load(cfgfile) # no es necesario, pero es util para ver el archivo de configuracion"
    ]
   },
@@ -142,7 +139,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cfgfile = 'config_files/SEIR.toml'\n",
+    "cfgfile = '../config_files/SEIR.toml'\n",
     "cfg = toml.load(cfgfile)"
    ]
   },
