--- a/research/Modelos Bassi.ipynb
+++ b/research/Modelos Bassi.ipynb
@@ -162,16 +162,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f211b1ec400>"
+       "<matplotlib.legend.Legend at 0x7f4d76701eb0>"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f21408bfc70>"
+       "<matplotlib.collections.PathCollection at 0x7f4d6c798a60>"
       ]
      },
      "execution_count": 12,
@@ -264,16 +264,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f21199e4fd0>"
+       "<matplotlib.legend.Legend at 0x7f4d6c7c8d60>"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,26 +409,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "77"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.where(I_d==max(I_d))[0][0]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -437,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,27 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.003738580566195927"
-      ]
-     },
-     "execution_count": 93,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.min(error_s)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,18 +599,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "gamma_s[30]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.legend.Legend at 0x7f4d6a281be0>"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "l = 3\n",
     "j = 30 # gamma\n",
@@ -662,57 +624,217 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Grid plot\n",
-    "l = 10\n",
-    "colors = plt.cm.rainbow_r(np.linspace(0,1,len(sigma_s)/l))\n",
-    "n = 5\n",
-    "fig, axs = plt.subplots(int(len(gamma_s)/n)+1, n)\n",
-    "for i in range(len(examrate)):\n",
-    "    axs[int(i/n),i%n].plot(simulation_reference.t,simulation_reference.I_d,label='I_d No exams',color = 'black',linestyle='dashed')\n",
-    "    for j in range(len(duty)):\n",
-    "        axs[int(i/n),i%n].plot(simulation[i][j].t,simulation[i][j].I_d,label='Examination duty: '+str(duty[j]))\n",
-    "        axs[int(i/n),i%n].legend(loc=0)\n",
-    "    axs[int(i/n),i%n].set_title('Exam Rate: '+str(examrate[i]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.9892594347214363"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Re_analitico[0]"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Error vs R0"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "beta2 = list(np.arange(0.2,0.6,0.01))\n",
+    "R0 = np.array(beta2)*tI_R"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sims2 = cv19sim(cfg,beta = beta2,mu=mu,I=I0,I_d=I0*beta,tE_I = tE_I,tI_R=tI_R,t_end=250)\n",
+    "sims2.integrate()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Calculo de R por delta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t0=15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Re_analitico2 = [beta2[i]*sims2.sims[i].S[t0:-1]/sims2.sims[i].N*tI_R for i in range(len(beta2))]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "delta2 = [getdelta(sims2.sims[i].I_d[t0:]) for i in range(len(beta2))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "234"
+      ]
+     },
+     "execution_count": 155,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(delta2[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "234"
+      ]
+     },
+     "execution_count": 156,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(Re_analitico2[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# R delta\n",
+    "Re_delta2 = []\n",
+    "for j in delta2:\n",
+    "    aux = []\n",
+    "    for i in range(len(j)):\n",
+    "        aux.append(1 + j[i]*Ts + sigma*gamma/(sigma + gamma)*(j[i]*Ts)**2)\n",
+    "    Re_delta2.append(aux)\n",
+    "Re_delta2=np.array(Re_delta2)\n",
+    "\n",
+    "# R delta aprox\n",
+    "#Re_delta_a = 1 + delta*Ts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<matplotlib.lines.Line2D at 0x7f4d47599880>]"
+      ]
+     },
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plt.plot(Re_delta2[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Error\n",
+    "err2 = []\n",
+    "for i in range(len(beta2)):\n",
+    "    err2.append((Re_analitico2[i][0:100]-Re_delta2[i][0:100]).mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 162,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plt.plot(R0,err2)\n",
+    "plt.title('Error calculo R vs R0')\n",
+    "plt.xlabel('R0')\n",
+    "plt.ylabel('Error')\n",
+    "plt.plot()"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# To Do:\n",
-    "[ ] Comprobar el orden de las variables en los arreglos sigma-gamma\n",
+    "[ ] Comprobar el orden de las variables en los arreglos sigma-gamma  \n",
     "[ ] Verificar el calculo de R porque no me están calzando bien los R con las magnitudes de los otros.\n",
     "[ ] Grid-plot  \n",
     "\n",
     "\n",
     "[ ] Estudiar cuanto aumenta el error a medida que cambian el tiempo serial, gamma y sigma \n",
     "\n",
-    "\n",
     "[x] Calcular Beta desde el R  \n",
     "[ ] Reconstruir las curvas con los parámetros obtenidos  \n",
     "[ ] Tratar de compatibilizar los cálculos de R de Felipe y de la nueva librería, y compararlos con el cálculo analítico  \n",
     "\n",
-    "[ ] Revisar calculo del error entre los cálculos de R para el contourplot.\n",
+    "[ ] Revisar calculo del error entre los cálculos de R para el contourplot.  \n",
     "[ ] Revisar calculo del error entre los cálculos de R. "
    ]
   },
