--- a/Examples_2/CV19SIM.ipynb
+++ b/Examples_2/CV19SIM.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,11 +30,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from cv19sim import cv19sim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Linux\n"
+     ]
+    }
+   ],
+   "source": [
+    "# For pop-up plots execute this code (optional)\n",
+    "import platform\n",
+    "OS = platform.system()\n",
+    "\n",
+    "if OS == 'Linux':    \n",
+    "    %matplotlib tk\n",
+    "    print('Linux')\n",
+    "elif OS == 'Windows':\n",
+    "    %matplotlib qt\n",
+    "    print('Windows')\n",
+    "elif OS == 'Darwin':\n",
+    "    %matplotlib tk\n",
+    "    print('Mac (Funciona?)')"
    ]
   },
   {
@@ -46,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,11 +213,194 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Value copies\n",
+    "When we want to run arrays of values using the same value for 2 different parameters."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cfgfile = '../config_files/SEIR.toml'\n",
+    "cfg = toml.load(cfgfile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sims6 = cv19sim(cfg,tE_I=[1,2,3],tI_R='tE_I')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sims6.integrate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.size(sims6.sims)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sim: 0\n",
+      "tE_I:1\n",
+      "tI_R:1\n",
+      " \n",
+      "sim: 1\n",
+      "tE_I:2\n",
+      "tI_R:2\n",
+      " \n",
+      "sim: 2\n",
+      "tE_I:3\n",
+      "tI_R:3\n",
+      " \n"
+     ]
+    }
+   ],
+   "source": [
+    "j = 0\n",
+    "for i in sims6.sims:\n",
+    "    print('sim: '+str(j))\n",
+    "    print('tE_I:'+str(i.tE_I(0)))\n",
+    "    print('tI_R:'+str(i.tI_R(0)))\n",
+    "    print(' ')\n",
+    "    j+=1\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SEIRHVD"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cfgfile = 'cfg/SEIRHVD.toml'\n",
+    "cfg = toml.load(cfgfile)\n",
+    "sims4 = cv19sim(cfg,model='SEIRHVD')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sims4.integrate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(sims4.sims[0].t,sims4.sims[0].S,label='S')\n",
+    "plt.plot(sims4.sims[0].t,sims4.sims[0].E,label='E')\n",
+    "plt.plot(sims4.sims[0].t,sims4.sims[0].I,label='I')\n",
+    "plt.plot(sims4.sims[0].t,sims4.sims[0].R,label='R')\n",
+    "plt.xlim(0,150)\n",
+    "plt.legend(loc=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(sims4.sims[0].t,sims4.sims[0].H,label='H')\n",
+    "plt.plot(sims4.sims[0].t,sims4.sims[0].D,label='D')\n",
+    "plt.xlim(0,150)\n",
+    "plt.legend(loc=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Multiple simulations with array of parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cfgfile = 'cfg/SEIRHVD.toml'\n",
+    "cfg = toml.load(cfgfile)\n",
+    "sims5 = cv19sim(cfg,model='SEIRHVD',pH_D = list(np.linspace(0,0.5,10)),H_cap=10000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sims5.integrate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for sim in sims5.sims:\n",
+    "    plt.plot(sim.t,sim.D,label='pH_D='+str(np.around(sim.pH_D(0),1)))\n",
+    "plt.legend(loc=0)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nota: Este ejemplo hace que se acumule más gente en el hospital cuando baja la tasa de mortalidad, eso se podrá corregir con el nuevo parámetro CFR (not ready). "
+   ]
   },
   {
    "cell_type": "code",
