--- a/Examples_2/SEIRHVD.ipynb
+++ b/Examples_2/SEIRHVD.ipynb
@@ -210,7 +210,7 @@
    "outputs": [],
    "source": [
     "# Vaccine campaign\n",
-    "Psi = cv19functions.Events(values=[0,20000,0],days=[[0,40],[40,60],[60,500]])"
+    "Psi = cv19functions.events(values=[0,20000,0],days=[[0,40],[40,60],[60,500]])"
    ]
   },
   {
@@ -387,7 +387,7 @@
    "outputs": [],
    "source": [
     "# Vaccine campaign\n",
-    "Psi = [cv19functions.Events(values=[0,i,0],days=[[0,40],[40,60],[60,500]]) for i in amount]"
+    "Psi = [cv19functions.events(values=[0,i,0],days=[[0,40],[40,60],[60,500]]) for i in amount]"
    ]
   },
   {
@@ -496,8 +496,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pH_R = cv19functions.Events(values=[0.7,0.6],days=[[0,30],[30,500]])\n",
-    "pH_D = cv19functions.Events(values=[0.3,0.4],days=[[0,30],[30,500]])"
+    "pH_R = cv19functions.events(values=[0.7,0.6],days=[[0,30],[30,500]])\n",
+    "pH_D = cv19functions.events(values=[0.3,0.4],days=[[0,30],[30,500]])"
    ]
   },
   {
