--- a/research/CV19-ReproductiveNumber.ipynb
+++ b/research/CV19-ReproductiveNumber.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,9 +32,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/samuel/anaconda3/lib/python3.8/site-packages/rpy2/robjects/pandas2ri.py:17: FutureWarning: pandas.core.index is deprecated and will be removed in a future version.  The public classes are available in the top-level namespace.\n",
+      "  from pandas.core.index import Index as PandasIndex\n"
+     ]
+    }
+   ],
    "source": [
     "# rpy2 imports\n",
     "from rpy2.robjects.packages import importr\n",
@@ -48,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +249,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f75cdefa910>"
+       "<matplotlib.legend.Legend at 0x7f9c77048310>"
       ]
      },
      "execution_count": 14,
@@ -368,6 +377,64 @@
    "outputs": [],
    "source": [
     "from epyestim.distributions import discretise_gamma"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Epyestim tests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "si_distrb = covid19.generate_standard_si_distribution()\n",
+    "delay_distrb = covid19.generate_standard_infection_to_reporting_distribution()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<matplotlib.lines.Line2D at 0x7f9c3da214f0>]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plt.plot(si_distrb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function bagging_r in module epyestim.main:\n",
+      "\n",
+      "bagging_r(confirmed_cases: pandas.core.series.Series, gt_distribution: numpy.ndarray, delay_distribution: numpy.ndarray, a_prior: float, b_prior: float, smoothing_window: int, r_window_size: Union[int, NoneType] = None, r_interval_dates: Union[List[datetime.date], NoneType] = None, n_samples: int = 100, quantiles: Iterable[float] = (0.025, 0.5, 0.975), auto_cutoff: bool = True) -> pandas.core.frame.DataFrame\n",
+      "    Compute aggregated bootstrapped R and returns aggregate quantiles\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(epyestim.bagging_r)"
    ]
   },
   {
