Updated examples + data function

--- a/Examples/cv19functions.ipynb
+++ b/Examples/cv19functions.ipynb
@@ -9,26 +9,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Linux\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.dates as mdates \n",
-    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "from cv19gm.utils import cv19functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Optional: For pop-up plots\n",
     "import platform\n",
     "OS = platform.system()\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
     "if OS == 'Linux':    \n",
     "    %matplotlib tk\n",
     "    print('Linux')\n",
@@ -39,15 +39,7 @@
     "    %matplotlib tk\n",
     "    print('Mac (Funciona?)')\n",
     "else:\n",
-    "    print('OS not detected :-|')\n",
-    "\n",
-    "import sys\n",
-    "from pathlib import Path\n",
-    "sys.path.insert(1, '../src2/models/')\n",
-    "sys.path.insert(1, '../src2/utils/')\n",
-    "sys.path.insert(1, '../src2/data/')\n",
-    "\n",
-    "from cv19gm.utils import cv19functions"
+    "    print('OS not detected :-|')"
    ]
   },
   {
@@ -71,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,12 +90,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "plt.plot(t,Events(t), label='Default value = 0')\n",
-    "#plt.plot(t,Events2(t), label='Default value = 4')\n",
+    "plt.plot(t,Events2(t), label='Default value = 4')\n",
     "plt.legend(loc=0)\n",
     "plt.title('Events function')\n",
     "plt.show()"
@@ -118,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +307,7 @@
    "metadata": {},
    "source": [
     "## Saturation\n",
-    "Function that builds binary functions which indicates when the sum of the arguments are bigger than the saturation function.\n",
+    "Builds a binary function that indicates when the sum of the arguments are bigger than the saturation function.\n",
     "\n",
     "    Args:\n",
     "        upperlimit (function or cv19function builder arg): Upper limit function\n",
@@ -333,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +353,35 @@
     "plt.plot(t,cv19functions.func_add(quadratic1,quadratic2)(t),label='input')\n",
     "plt.axhline(2,linestyle='dashed',color='grey',label='saturation value')\n",
     "plt.legend(loc=0)\n",
-    "plt.title('Saturation function: saturates at 2')\n",
+    "plt.title('Saturation function \\n changes value when the input is bigger than 2')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Transform data into a function\n",
+    "This function creates a function from a data array. The future values can be a static value or another function "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating random data\n",
+    "data = [np.random.randint(-10,10) for i in range(50)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter(range(len(data)),data)\n",
     "plt.show()"
    ]
   },
@@ -370,7 +390,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "function = cv19functions.data_function(data,np.mean(data[-5:]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = np.linspace(0,70,1000)\n",
+    "plt.plot(t,[function(i) for i in t],label='function')\n",
+    "plt.scatter(range(len(data)),data,label='data',color='red')\n",
+    "plt.legend(loc=0)\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
