--- a/Examples/SEIRHVD.ipynb
+++ b/Examples/SEIRHVD.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# SEIRHVD model example\n",
-    "## Work in progress (equations not ready)\n",
+    "## Work in progress\n",
     "\\begin{align}\n",
     "\\dot{S} & = S_f - \\alpha\\beta\\frac{SI}{N+k_I I+k_R R} + r_{R\\_S} R\\\\\n",
     "\\dot{E} & = E_f + \\alpha\\beta\\frac{SI}{N+k_I I+k_R R} - E\\frac{1}{t_{E\\_I}} \\\\\n",
@@ -191,7 +191,7 @@
    "outputs": [],
    "source": [
     "# Vaccine campaign\n",
-    "Psi = cv19functions.events(values=[0,20000,0],days=[[0,40],[40,60],[60,500]])"
+    "vac_d = cv19functions.events(values=[0,20000,0],days=[[0,40],[40,60],[60,500]])"
    ]
   },
   {
@@ -204,7 +204,7 @@
     "# Input configuration file\n",
     "config = 'cfg/SEIRHVD_SEIR.toml'\n",
     "# Build simulation object\n",
-    "model_vac = SEIRHVD(config = config,Psi=Psi,v = 1.0)\n",
+    "model_vac = SEIRHVD(config = config,vac_d=vac_d,v = 1.0)\n",
     "# Simulate (solve ODE)\n",
     "model_vac.solve()"
    ]
@@ -220,7 +220,7 @@
     "plt.plot(model_vac.t,model_vac.I,label='Itotal (vaccines scenario)')\n",
     "plt.plot(model.t,model.I,label='Itotal (no vaccines scenario)')\n",
     "plt.plot(model_vac.t,model_vac.Iv,label='Vaccinated infected')\n",
-    "plt.plot(np.arange(model_vac.tsim),[Psi(i) for i in np.arange(model_vac.tsim)],label='Daily Vaccination')\n",
+    "plt.plot(np.arange(model_vac.tsim),[vac_d(i) for i in np.arange(model_vac.tsim)],label='Daily Vaccination')\n",
     "plt.xlim(0,300)\n",
     "plt.legend(loc=0)\n",
     "plt.title('SEIRV')\n",
@@ -240,8 +240,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "v = list(np.arange(0,1.1,0.1))\n",
-    "model_vac2 = [SEIRHVD(config = config,Psi=Psi,v = i) for i in v]\n",
+    "vac_eff = list(np.arange(0,1.1,0.1))\n",
+    "model_vac2 = [SEIRHVD(config = config,vac_d=vac_d,vac_eff = i) for i in vac_eff]\n",
     "for i in model_vac2:\n",
     "    i.solve()"
    ]
@@ -265,7 +265,7 @@
     "for model_vac in model_vac2:\n",
     "    #plt.plot(model_vac.t,model_vac.I,label='I with vaccines')\n",
     "    \"{:#.2g}\".format(i)\n",
-    "    plt.plot(model_vac.t,model_vac.I,label='I eff:'+\"{:#.1g}\".format(model_vac.v(0)),color=colors[i])\n",
+    "    plt.plot(model_vac.t,model_vac.I,label='I eff:'+\"{:#.1g}\".format(model_vac.vac_eff(0)),color=colors[i])\n",
     "    #plt.plot(model_vac.t,model_vac.Iv,label='Iv eff:'+\"{:#.1g}\".format(model_vac.v(0)),color=colors[i],linestyle='dashed')\n",
     "    i+=1\n",
     "plt.plot(np.arange(model_vac.tsim),[Psi(i) for i in np.arange(model_vac.tsim)],color='red',label='Daily Vaccination')\n",
@@ -294,7 +294,7 @@
     "config = 'cfg/SEIRHVD.toml'\n",
     "# Build simulation object\n",
     "model1 = SEIRHVD(config = config, H_cap=4000)\n",
-    "model2 = SEIRHVD(config = config, H_cap=3500,Psi=Psi)\n",
+    "model2 = SEIRHVD(config = config, H_cap=3500,vac_d=vac_d)\n",
     "# Simulate (solve ODE)\n",
     "model1.solve()\n",
     "model2.solve()"
@@ -362,7 +362,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "v = list(np.arange(0,1.1,0.1))\n",
+    "vac_eff = list(np.arange(0,1.1,0.1))\n",
     "#Psi = cv19functions.events(values=[0,20000,0],days=[[0,5],[5,25],[25,500]])\n",
     "population = 1000000\n",
     "Sv0 = population*0.5"
@@ -383,7 +383,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model3 = CV19SIM(config = config,model='SEIRHVD',v=v,population=population,Sv=Sv0)"
+    "model3 = CV19SIM(config = config,model='SEIRHVD',vac_eff=vac_eff,population=population,Sv=Sv0)"
    ]
   },
   {
@@ -419,7 +419,7 @@
     "\n",
     "axs2 = axs.twinx()\n",
     "for i in range(len(sims)):\n",
-    "    axs2.plot(sims[i].t,sims[i].Iv_ac/sims[i].I_ac,label='Veff: '+\"{:#.1g}\".format(sims[i].v(0)),color=colors[i])    \n",
+    "    axs2.plot(sims[i].t,sims[i].Iv_ac/sims[i].I_ac,label='Veff: '+\"{:#.1g}\".format(sims[i].vac_eff(0)),color=colors[i])    \n",
     "\n",
     "    \n",
     "axs2.set_ylabel('Iv/I')\n",
@@ -452,7 +452,7 @@
    "outputs": [],
    "source": [
     "beta = list(np.arange(0.1,0.3,0.1))\n",
-    "model4 = CV19SIM(config = config,model='SEIRHVD',beta=beta,betav='beta',v=v,population=population,Sv=Sv0)"
+    "model4 = CV19SIM(config = config,model='SEIRHVD',beta=beta,betav='beta',vac_eff=vac_eff,population=population,Sv=Sv0)"
    ]
   },
   {
@@ -462,113 +462,6 @@
    "outputs": [],
    "source": [
     "model4.solve()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Vaccines amount, effectivity  and deaths"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "eff = list(np.arange(0,1.1,0.1))\n",
-    "amount = np.linspace(0,30000,31)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Vaccine campaign\n",
-    "Psi = [cv19functions.events(values=[0,i,0],days=[[0,40],[40,60],[60,500]]) for i in amount]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%capture\n",
-    "# Input configuration file\n",
-    "config = 'cfg/SEIRHVD_SEIR.toml'\n",
-    "# Build simulation object\n",
-    "models = []\n",
-    "for i in eff:\n",
-    "    aux = []\n",
-    "    for j in Psi:\n",
-    "        a = SEIRHVD(config = config,Psi=j,v = i)\n",
-    "        a.integrate()\n",
-    "        aux.append(a)\n",
-    "    models.append(aux)\n",
-    "        # Simulate (solve ODE)\n",
-    "#model_vac.integrate()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Plot matplotlib\n",
-    "plt.plot(model_vac.t,model_vac.I,label='I with vaccines')\n",
-    "plt.plot(model.t,model.I,label='I no vaccines')\n",
-    "plt.plot(model_vac.t,model_vac.Iv,label='Vaccinated infected')\n",
-    "plt.plot(np.arange(model_vac.tsim),[Psi(i) for i in np.arange(model_vac.tsim)])\n",
-    "plt.xlim(0,300)\n",
-    "plt.legend(loc=0)\n",
-    "plt.title('SEIRV')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_vac2 = [SEIRHVD(config = config,Psi=Psi,v = i) for i in v]\n",
-    "for i in model_vac2:\n",
-    "    i.solve()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "colors = plt.cm.rainbow_r(np.linspace(0,1,len(v)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "i = 0\n",
-    "for model_vac in model_vac2:\n",
-    "    #plt.plot(model_vac.t,model_vac.I,label='I with vaccines')\n",
-    "    \"{:#.2g}\".format(i)\n",
-    "    plt.plot(model_vac.t,model_vac.I,label='I eff:'+\"{:#.1g}\".format(model_vac.v(0)),color=colors[i])\n",
-    "    #plt.plot(model_vac.t,model_vac.Iv,label='Iv eff:'+\"{:#.1g}\".format(model_vac.v(0)),color=colors[i],linestyle='dashed')\n",
-    "    i+=1\n",
-    "plt.plot(np.arange(model_vac.tsim),[Psi(i) for i in np.arange(model_vac.tsim)])\n",
-    "plt.legend(loc=0)\n",
-    "\n",
-    "plt.xlim(0,300)\n",
-    "plt.title('Vaccines effectivity')\n",
-    "plt.show() "
    ]
   },
   {
@@ -640,6 +533,130 @@
     "plt.title('ICU capacity and deaths')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Vaccines amount, effectivity  and deaths\n",
+    "(work in progress)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eff = list(np.arange(0,1.1,0.1))\n",
+    "amount = np.linspace(0,30000,31)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Vaccine campaign\n",
+    "vac_d = [cv19functions.events(values=[0,i,0],days=[[0,40],[40,60],[60,500]]) for i in amount]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%capture\n",
+    "# Input configuration file\n",
+    "config = 'cfg/SEIRHVD_SEIR.toml'\n",
+    "# Build simulation object\n",
+    "models = []\n",
+    "for i in eff:\n",
+    "    aux = []\n",
+    "    for j in vac_d:\n",
+    "        a = SEIRHVD(config = config,vac_d=j,vac_eff = i)\n",
+    "        a.integrate()\n",
+    "        aux.append(a)\n",
+    "    models.append(aux)\n",
+    "        # Simulate (solve ODE)\n",
+    "#model_vac.integrate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot matplotlib\n",
+    "plt.plot(model_vac.t,model_vac.I,label='I with vaccines')\n",
+    "plt.plot(model.t,model.I,label='I no vaccines')\n",
+    "plt.plot(model_vac.t,model_vac.Iv,label='Vaccinated infected')\n",
+    "plt.plot(np.arange(model_vac.tsim),[vac_d(i) for i in np.arange(model_vac.tsim)])\n",
+    "plt.xlim(0,300)\n",
+    "plt.legend(loc=0)\n",
+    "plt.title('SEIRV')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(vac_d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_vac2 = [SEIRHVD(config = config,vac_d=0.7,vac_eff = i) for i in vac_eff]\n",
+    "for i in model_vac2:\n",
+    "    i.solve()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "colors = plt.cm.rainbow_r(np.linspace(0,1,len(vac_eff)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = 0\n",
+    "for model_vac in model_vac2:\n",
+    "    #plt.plot(model_vac.t,model_vac.I,label='I with vaccines')\n",
+    "    \"{:#.2g}\".format(i)\n",
+    "    plt.plot(model_vac.t,model_vac.I,label='I eff:'+\"{:#.1g}\".format(model_vac.vac_eff(0)),color=colors[i])\n",
+    "    #plt.plot(model_vac.t,model_vac.Iv,label='Iv eff:'+\"{:#.1g}\".format(model_vac.v(0)),color=colors[i],linestyle='dashed')\n",
+    "    i+=1\n",
+    "plt.plot(np.arange(model_vac.tsim),[vac_d(i) for i in np.arange(model_vac.tsim)])\n",
+    "plt.legend(loc=0)\n",
+    "\n",
+    "plt.xlim(0,300)\n",
+    "plt.title('Vaccines effectivity')\n",
+    "plt.show() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
