--- a/Examples/cv19functions.ipynb
+++ b/Examples/cv19functions.ipynb
@@ -155,7 +155,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Create time range\n",
+    "#Create time ra1nge\n",
     "t = np.linspace(0,70,1000)"
    ]
   },
@@ -165,9 +165,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "square = cv19functions.square(min_val=0,max_val=1,period=14,t_init=0,t_end=1000,default=0,initphase='min',duty=0.5)\n",
-    "sine = cv19functions.sine(min_val=2,max_val=3,period=7,t_init=20,t_end=60,default=2,initphase='min')\n",
-    "sawtooth = cv19functions.sawtooth(min_val=4,max_val=5,period=14,t_init=0,t_end=1000,default=4,initphase='min',width=0)"
+    "square = cv19functions.square(min_val=0,max_val=1,period=14,t_init=0,t_end=1000,default=0,initphase=0,duty=0.5)\n",
+    "sine = cv19functions.sine(min_val=2,max_val=3,period=7,t_init=20,t_end=60,default=2,initphase=1)\n",
+    "sawtooth = cv19functions.sawtooth(min_val=4,max_val=5,period=14,t_init=0,t_end=1000,default=4,initphase=0,width=0)"
    ]
   },
   {
@@ -266,7 +266,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "constructor = '{\"function\":\"events\",\"values\":[0.45,0.85],\"days\":[[0,10],[10,20]]}'\n",
+    "constructor = '{\"function\":\"events\",\"values\":[0.45,0.85,1],\"days\":[[0,10],[10,20],[22,30]],\"default\":0}'\n",
     "build1 = cv19functions.build(constructor)"
    ]
   },
@@ -298,6 +298,27 @@
    "outputs": [],
    "source": [
     "plt.plot(t,build2(t))\n",
+    "plt.title('Function constructor')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "constructor = '{\"function\":\"events\",\"values\":[0.45,0.85,{\"function\":\"sine\",\"min_val\":0,\"max_val\":1,\"period\":7}],\"days\":[[0,10],[10,20],[22,50]],\"default\":0}'\n",
+    "build3 = cv19functions.build(constructor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(t,build3(t))\n",
     "plt.title('Function constructor')\n",
     "plt.show()"
    ]
@@ -406,6 +427,13 @@
     "plt.legend(loc=0)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
